2015-12-02  Mark Wielaard  <mjw@redhat.com>

	* fde.c (intern_fde): Don't leak duplicate FDEs.

2015-12-01  Mark Wielaard  <mjw@redhat.com>

	* fde.c (intern_fde): Don't intern an fde that doesn't cover a
	valid code range.

2015-12-01  Mark Wielaard  <mjw@redhat.com>

	* dwarf_end.c (dwarf_end): Call cu_free on fake_loc_cu if it exists.

2015-10-14  Chih-Hung Hsieh  <chh@google.com>

	* dwarf_entry_breakpoints.c (dwarf_entry_breakpoints): Move recursive
	functions 'add_bkpt', 'entrypc_bkpt', and 'search_range' to file scope.

2015-10-14  Chih-Hung Hsieh  <chh@google.com>

	* libdw_visit_scopes.c (__libdw_visit_scopes): Move recursive nested
	function 'walk_children' to file scope; inline 'recurse' at its call
	site.

2015-10-19  Mark Wielaard  <mjw@redhat.com>

	* frame-cache.c (__libdw_destroy_frame_cache): Call ebl_closebackend
	if necessary.

2015-10-16  Dmitry V. Levin  <ldv@altlinux.org>

	* dwarf_getsrclines.c (read_srclines): Initialize state early.

2015-10-13  Chih-Hung Hsieh  <chh@google.com>

	* dwarf_getsrclines.c (read_srclines): Move nested functions
	'advance_pc' and 'add_new_line' to file scope and keep many
	local state variables within one structure.

2015-10-13  Chih-Hung Hsieh  <chh@google.com>

	* dwarf_getscopevar.c (dwarf_getscopevar): Move nested
	function 'file_matches' to file scope.

2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (libdw.so): Add -lz.

2015-10-14  Chih-Hung Hsieh  <chh@google.com>

	* cfi.c (execute_cfi): Move nested functions 'enough_registers'
	and 'require_cfa_offset' to file scope.

2015-10-09  Josh Stone  <jistone@redhat.com>

	* dwarf_begin.c (dwarf_begin): Replace stat64 and fstat64 with stat
	and fstat.

2015-10-05  Josh Stone  <jistone@redhat.com>

	* Makefile.am (libdw.so): Add AM_V_CCLD and AM_V_at silencers.

2015-09-24  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* Makefile.am (AM_CFLAGS): Use -fPIC instead of -fpic to avoid
	relocation overflows in some platforms.
