@@ -1,3 +1,7 @@
+2015-10-28  Mark Wielaard  <mjw@redhat.com>
+
+	* libdw.map (ELFUTILS_0.165): New. Add dwelf_scn_gnu_compressed_size.
+
 2015-12-02  Mark Wielaard  <mjw@redhat.com>
 
 	* fde.c (intern_fde): Don't leak duplicate FDEs.
